--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="icon" type="image/x-icon" href="C:\Users\krism\OneDrive\Desktop\portfolio\icons\favicon.png">
         
         <!--stylesheet-->
-        <link rel="stylesheet" href="home.css">
+        <link rel="stylesheet" href="styles.css">
 
         <!--icons-->
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
