--- a/index.html
+++ b/index.html
@@ -327,6 +327,6 @@
         
         </div>
 
-        <script src="portfolio.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
