--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             </div>
 
             <!--education button-->
-            <button class="folder" id="education-button"><img src="C:\Users\krism\OneDrive\Desktop\portfolio\icons\Briefcase.ico"><br>Education</button>
+            <button class="folder" id="education-button"><img src="icons/Briefcase.ico"><br>Education</button>
             
             <!--modal container -->
             <div class="modal-box" id="education-modal-box">
