--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             </div>
 
             <!--education button-->
-            <button class="folder" id="education-button"><img src="icons/Briefcase.ico"><br>Education</button>
+            <button class="folder" id="education-button"><img src="https://github.com/auchyoo/auchyoo.github.io/blob/3e2d53838a1ee74eb1fea58f258cff5065f7934f/icons/Briefcase.ico"><br>Education</button>
             
             <!--modal container -->
             <div class="modal-box" id="education-modal-box">
