--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="folders">
 
             <!--download cv-->
-            <a href="https://drive.google.com/file/d/1nOm7Ni9Q8qCfZISvVUB_Xl7U8hRb_jbo/view?usp=sharing" class="folder" download><img src="https://github.com/auchyoo/auchyoo.github.io/blob/61d31e918965c3fefd75c32407e2b6717c769ac7/icons/Blank.ico"><br>Download CV</a>
+            <a href="https://drive.google.com/file/d/1nOm7Ni9Q8qCfZISvVUB_Xl7U8hRb_jbo/view?usp=sharing" class="folder" download><img src="https://raw.githubusercontent.com/auchyoo/auchyoo.github.io/refs/heads/main/icons/Blank.ico"><br>Download CV</a>
             
             <!--skills button-->
             <button class="folder" id="skills-button"><img src="https://github.com/auchyoo/auchyoo.github.io/blob/61d31e918965c3fefd75c32407e2b6717c769ac7/icons/Folder%20Open.ico"><br>Skills</button>
