--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                 <!--img-->
                 <div class="home-img">
-                    <img src="https://github.com/auchyoo/auchyoo.github.io/blob/61d31e918965c3fefd75c32407e2b6717c769ac7/images/kris_chua_portfolio.JPG" alt="home">
+                    <img src="https://drive.google.com/file/d/1aEsRf4C3i-YUYGk6DglbvE_fdcY15yOT/view?usp=drive_link" alt="home">
                 </div>
 
                 <!--search bar-->
