--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/kristina-margelino-5b9b4b205/" target="_blank"><img src="https://github.com/auchyoo/auchyoo.github.io/blob/61d31e918965c3fefd75c32407e2b6717c769ac7/icons/linkedin.png"></a>
                     <a href="https://github.com/auchyoo" target="_blank"><img src="https://github.com/auchyoo/auchyoo.github.io/blob/61d31e918965c3fefd75c32407e2b6717c769ac7/icons/github.png"></a>
-                    <a href="https://web.facebook.com/margelino.kris" target="_blank"><img src="https://github.com/auchyoo/auchyoo.github.io/blob/61d31e918965c3fefd75c32407e2b6717c769ac7/icons/facebook.png"></a>
+                    <a href="https://web.facebook.com/margelino.kris" target="_blank"><img src="icons/facebook.png"></a>
                     <a href="mailto:krismargelino@gmail.com" target="_blank"><img src="https://github.com/auchyoo/auchyoo.github.io/blob/61d31e918965c3fefd75c32407e2b6717c769ac7/icons/outlook.png" alt="Email"></a>
                 </div>
             </div>
