--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                         
                 <!--socials-->
                 <div class="social-icons">
-                    <a href="https://www.linkedin.com/in/kristina-margelino-5b9b4b205/" target="_blank"><img src="https://github.com/auchyoo/auchyoo.github.io/blob/61d31e918965c3fefd75c32407e2b6717c769ac7/icons/linkedin.png"></a>
-                    <a href="https://github.com/auchyoo" target="_blank"><img src="https://github.com/auchyoo/auchyoo.github.io/blob/61d31e918965c3fefd75c32407e2b6717c769ac7/icons/github.png"></a>
-                    <a href="https://web.facebook.com/margelino.kris" target="_blank"><img src="https://raw.githubusercontent.com/auchyoo/auchyoo.github.io/refs/heads/main/icons/facebook_logo_icon_147291.ico"></a>
-                    <a href="mailto:krismargelino@gmail.com" target="_blank"><img src="https://github.com/auchyoo/auchyoo.github.io/blob/61d31e918965c3fefd75c32407e2b6717c769ac7/icons/outlook.png" alt="Email"></a>
+                    <a href="https://www.linkedin.com/in/kristina-margelino-5b9b4b205/" target="_blank"><img src="https://raw.githubusercontent.com/auchyoo/auchyoo.github.io/refs/heads/main/icons/in_linked_linkedin_media_social_icon_124259.ico" alt="linkedin"></a>
+                    <a href="https://github.com/auchyoo" target="_blank"><img src="https://raw.githubusercontent.com/auchyoo/auchyoo.github.io/refs/heads/main/icons/github-logo_icon-icons.com_73546.ico" alt="github"></a>
+                    <a href="https://web.facebook.com/margelino.kris" target="_blank"><img src="https://raw.githubusercontent.com/auchyoo/auchyoo.github.io/refs/heads/main/icons/facebook_logo_icon_147291.ico" alt="facebook"></a>
+                    <a href="mailto:krismargelino@gmail.com" target="_blank"><img src="https://raw.githubusercontent.com/auchyoo/auchyoo.github.io/refs/heads/main/icons/microsoft_office_outlook_logo_icon_145721.ico" alt="Email"></a>
                 </div>
             </div>
 
