--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Kris' Portfolio</title>
 
         <!--favicon-->
-        <link rel="icon" type="image/x-icon" href="https://github.com/auchyoo/auchyoo.github.io/blob/61d31e918965c3fefd75c32407e2b6717c769ac7/icons/favicon.png">
+        <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/auchyoo/auchyoo.github.io/refs/heads/main/icons/favicon.ico">
         
         <!--stylesheet-->
         <link rel="stylesheet" href="styles.css">
@@ -28,7 +28,7 @@
 
                 <!--img-->
                 <div class="home-img">
-                    <img src="https://drive.google.com/file/d/1aEsRf4C3i-YUYGk6DglbvE_fdcY15yOT/view?usp=drive_link" alt="home">
+                    <img src="https://raw.githubusercontent.com/auchyoo/auchyoo.github.io/refs/heads/main/icons/kris_chua_portfolio.ico" alt="home">
                 </div>
 
                 <!--search bar-->
